--- a/image_converter.html
+++ b/image_converter.html
@@ -13,6 +13,8 @@
       width: 150px;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1564059590923132"
+  crossorigin="anonymous"></script>
 </head>
 <body class="container mt-5">
   <div class="form-group">
